// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StateFilter component snaps should render in default mode 1`] = `
<div
  className="tc-resource-picker-state-filters theme-tc-resource-picker-state-filters"
>
  <span
    className="theme-option-label"
  >
    Filter:
  </span>
  <ActionIconToggle
    active={false}
    className="theme-tc-resource-picker-selection-filter"
    icon="talend-check-circle"
    label="Selected"
    onClick={[Function]}
    tick={false}
    tooltipPlacement="top"
  />
  <ActionIconToggle
    active={false}
    className="theme-tc-resource-picker-certified-filter"
    icon="talend-badge"
    label="Certified"
    onClick={[Function]}
    tick={false}
    tooltipPlacement="top"
  />
  <ActionIconToggle
    active={false}
    className="theme-tc-resource-picker-favorite-filter"
    icon="talend-star"
    label="Favorites"
    onClick={[Function]}
    tick={false}
    tooltipPlacement="top"
  />
</div>
`;

exports[`StateFilter component snaps should render with only certified 1`] = `
<div
  className="tc-resource-picker-state-filters theme-tc-resource-picker-state-filters"
>
  <span
    className="theme-option-label"
  >
    Filter:
  </span>
  <ActionIconToggle
    active={false}
    className="theme-tc-resource-picker-certified-filter"
    icon="talend-badge"
    label="Certified"
    onClick={[Function]}
    tick={false}
    tooltipPlacement="top"
  />
</div>
`;

exports[`StateFilter component snaps should render with only favorites 1`] = `
<div
  className="tc-resource-picker-state-filters theme-tc-resource-picker-state-filters"
>
  <span
    className="theme-option-label"
  >
    Filter:
  </span>
  <ActionIconToggle
    active={false}
    className="theme-tc-resource-picker-favorite-filter"
    icon="talend-star"
    label="Favorites"
    onClick={[Function]}
    tick={false}
    tooltipPlacement="top"
  />
</div>
`;

exports[`StateFilter component snaps should render with states to set to true 1`] = `
<div
  className="tc-resource-picker-state-filters theme-tc-resource-picker-state-filters"
>
  <span
    className="theme-option-label"
  >
    Filter:
  </span>
  <ActionIconToggle
    active={false}
    className="theme-tc-resource-picker-selection-filter"
    icon="talend-check-circle"
    label="Selected"
    onClick={[Function]}
    tick={false}
    tooltipPlacement="top"
  />
  <ActionIconToggle
    active={true}
    className="theme-tc-resource-picker-certified-filter"
    icon="talend-badge"
    label="Certified"
    onClick={[Function]}
    tick={false}
    tooltipPlacement="top"
  />
  <ActionIconToggle
    active={true}
    className="theme-tc-resource-picker-favorite-filter"
    icon="talend-star"
    label="Favorites"
    onClick={[Function]}
    tick={false}
    tooltipPlacement="top"
  />
</div>
`;
